# csv-profiler

./: .gitignore  README.ipynb  README.md  main.py  pyproject.toml
.git1/: COMMIT_EDITMSG  FETCH_HEAD  ORIG_HEAD  config  index
.git1/logs/: HEAD
.git1/logs/refs/heads/: day2  main
.git1/logs/refs/remotes/origin/: main
.git1/refs/heads/: day2
.git1/refs/remotes/origin/: main
data/: sample.csv
src/csv_profiler/: app.py  cli.py  io.py  models.py  profiling.py  render.py  strings.py
